Bing/ParBing.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from ParBing.y
-----------------------------------------------------------------------------


rule 42 is unused
rule 43 is unused
rule 48 is unused
rule 49 is unused
rule 50 is unused
rule 76 is unused
rule 77 is unused
rule 78 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListTopDef                              (4)
	TopDef -> Type Ident '(' ListParam ')' Block       (5)
	ListTopDef -> TopDef                               (6)
	ListTopDef -> TopDef ListTopDef                    (7)
	Param -> Type Ident                                (8)
	ListParam ->                                       (9)
	ListParam -> Param                                 (10)
	ListParam -> Param ',' ListParam                   (11)
	Block -> '{' ListStmt '}'                          (12)
	ListStmt ->                                        (13)
	ListStmt -> Stmt ListStmt                          (14)
	Stmt -> ';'                                        (15)
	Stmt -> Block                                      (16)
	Stmt -> Type ListItem ';'                          (17)
	Stmt -> TopDef                                     (18)
	Stmt -> 'const' Type ListItem ';'                  (19)
	Stmt -> Ident '=' Expr ';'                         (20)
	Stmt -> Ident '++' ';'                             (21)
	Stmt -> Ident '--' ';'                             (22)
	Stmt -> 'return' Expr ';'                          (23)
	Stmt -> 'return' ';'                               (24)
	Stmt -> 'while' '(' Expr ')' Stmt                  (25)
	Stmt -> 'for' '(' Ident '=' Expr 'to' Expr ')' Stmt   (26)
	Stmt -> Expr ';'                                   (27)
	Stmt -> 'break' ';'                                (28)
	Stmt -> 'continue' ';'                             (29)
	Stmt -> 'println' '(' Expr ')'                     (30)
	Stmt -> 'print' '(' Expr ')'                       (31)
	Stmt -> 'if' '(' Expr ')' Block                    (32)
	Stmt -> 'if' '(' Expr ')' Block 'else' Block       (33)
	Stmt -> 'if' '(' Expr ')' Block ECond              (34)
	Item -> Ident                                      (35)
	Item -> Ident '=' Expr                             (36)
	ListItem -> Item                                   (37)
	ListItem -> Item ',' ListItem                      (38)
	ECond -> 'elif' '(' Expr ')' Block                 (39)
	ECond -> 'elif' '(' Expr ')' Block 'else' Block    (40)
	ECond -> 'elif' '(' Expr ')' Block ECond           (41)
	ListECond ->                                       (42)
	ListECond -> ECond ListECond                       (43)
	Type -> 'int'                                      (44)
	Type -> 'string'                                   (45)
	Type -> 'bool'                                     (46)
	Type -> 'void'                                     (47)
	ListType ->                                        (48)
	ListType -> Type                                   (49)
	ListType -> Type ',' ListType                      (50)
	Arg -> Expr                                        (51)
	Arg -> '&' Ident                                   (52)
	ListArg ->                                         (53)
	ListArg -> Arg                                     (54)
	ListArg -> Arg ',' ListArg                         (55)
	Expr6 -> Ident                                     (56)
	Expr6 -> Integer                                   (57)
	Expr6 -> 'True'                                    (58)
	Expr6 -> 'False'                                   (59)
	Expr6 -> Ident '(' ListArg ')'                     (60)
	Expr6 -> String                                    (61)
	Expr6 -> '(' Expr ')'                              (62)
	Expr5 -> '-' Expr6                                 (63)
	Expr5 -> '!' Expr6                                 (64)
	Expr5 -> Expr6                                     (65)
	Expr4 -> Expr4 MulOp Expr5                         (66)
	Expr4 -> Expr5                                     (67)
	Expr3 -> Expr3 AddOp Expr4                         (68)
	Expr3 -> Expr4                                     (69)
	Expr2 -> Expr2 RelOp Expr3                         (70)
	Expr2 -> Expr3                                     (71)
	Expr1 -> Expr2 '&&' Expr1                          (72)
	Expr1 -> Expr2                                     (73)
	Expr -> Expr1 '||' Expr                            (74)
	Expr -> Expr1                                      (75)
	ListExpr ->                                        (76)
	ListExpr -> Expr                                   (77)
	ListExpr -> Expr ',' ListExpr                      (78)
	AddOp -> '+'                                       (79)
	AddOp -> '-'                                       (80)
	MulOp -> '*'                                       (81)
	MulOp -> '/'                                       (82)
	MulOp -> '%'                                       (83)
	RelOp -> '<'                                       (84)
	RelOp -> '<='                                      (85)
	RelOp -> '>'                                       (86)
	RelOp -> '>='                                      (87)
	RelOp -> '=='                                      (88)
	RelOp -> '!='                                      (89)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'%'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'&&'           { PT _ (TS _ 5) }
	'('            { PT _ (TS _ 6) }
	')'            { PT _ (TS _ 7) }
	'*'            { PT _ (TS _ 8) }
	'+'            { PT _ (TS _ 9) }
	'++'           { PT _ (TS _ 10) }
	','            { PT _ (TS _ 11) }
	'-'            { PT _ (TS _ 12) }
	'--'           { PT _ (TS _ 13) }
	'/'            { PT _ (TS _ 14) }
	';'            { PT _ (TS _ 15) }
	'<'            { PT _ (TS _ 16) }
	'<='           { PT _ (TS _ 17) }
	'='            { PT _ (TS _ 18) }
	'=='           { PT _ (TS _ 19) }
	'>'            { PT _ (TS _ 20) }
	'>='           { PT _ (TS _ 21) }
	'False'        { PT _ (TS _ 22) }
	'True'         { PT _ (TS _ 23) }
	'bool'         { PT _ (TS _ 24) }
	'break'        { PT _ (TS _ 25) }
	'const'        { PT _ (TS _ 26) }
	'continue'     { PT _ (TS _ 27) }
	'elif'         { PT _ (TS _ 28) }
	'else'         { PT _ (TS _ 29) }
	'for'          { PT _ (TS _ 30) }
	'if'           { PT _ (TS _ 31) }
	'int'          { PT _ (TS _ 32) }
	'print'        { PT _ (TS _ 33) }
	'println'      { PT _ (TS _ 34) }
	'return'       { PT _ (TS _ 35) }
	'string'       { PT _ (TS _ 36) }
	'to'           { PT _ (TS _ 37) }
	'void'         { PT _ (TS _ 38) }
	'while'        { PT _ (TS _ 39) }
	'{'            { PT _ (TS _ 40) }
	'||'           { PT _ (TS _ 41) }
	'}'            { PT _ (TS _ 42) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	TopDef          rule  5
	ListTopDef      rules 6, 7
	Param           rule  8
	ListParam       rules 9, 10, 11
	Block           rule  12
	ListStmt        rules 13, 14
	Stmt            rules 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34
	Item            rules 35, 36
	ListItem        rules 37, 38
	ECond           rules 39, 40, 41
	ListECond       rules 42, 43
	Type            rules 44, 45, 46, 47
	ListType        rules 48, 49, 50
	Arg             rules 51, 52
	ListArg         rules 53, 54, 55
	Expr6           rules 56, 57, 58, 59, 60, 61, 62
	Expr5           rules 63, 64, 65
	Expr4           rules 66, 67
	Expr3           rules 68, 69
	Expr2           rules 70, 71
	Expr1           rules 72, 73
	Expr            rules 74, 75
	ListExpr        rules 76, 77, 78
	AddOp           rules 79, 80
	MulOp           rules 81, 82, 83
	RelOp           rules 84, 85, 86, 87, 88, 89

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Program        goto state 3
	TopDef         goto state 4
	ListTopDef     goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'%'            reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	'++'           reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'--'           reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'to'           reduce using rule 1
	'||'           reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListTopDef -> TopDef .                              (rule 6)
	ListTopDef -> TopDef . ListTopDef                   (rule 7)

	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	%eof           reduce using rule 6

	TopDef         goto state 4
	ListTopDef     goto state 12
	Type           goto state 6

State 5

	Program -> ListTopDef .                             (rule 4)

	%eof           reduce using rule 4


State 6

	TopDef -> Type . Ident '(' ListParam ')' Block      (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 11

State 7

	Type -> 'bool' .                                    (rule 46)

	L_Ident        reduce using rule 46


State 8

	Type -> 'int' .                                     (rule 44)

	L_Ident        reduce using rule 44


State 9

	Type -> 'string' .                                  (rule 45)

	L_Ident        reduce using rule 45


State 10

	Type -> 'void' .                                    (rule 47)

	L_Ident        reduce using rule 47


State 11

	TopDef -> Type Ident . '(' ListParam ')' Block      (rule 5)

	'('            shift, and enter state 13


State 12

	ListTopDef -> TopDef ListTopDef .                   (rule 7)

	%eof           reduce using rule 7


State 13

	TopDef -> Type Ident '(' . ListParam ')' Block      (rule 5)

	')'            reduce using rule 9
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Param          goto state 14
	ListParam      goto state 15
	Type           goto state 16

State 14

	ListParam -> Param .                                (rule 10)
	ListParam -> Param . ',' ListParam                  (rule 11)

	')'            reduce using rule 10
	','            shift, and enter state 19


State 15

	TopDef -> Type Ident '(' ListParam . ')' Block      (rule 5)

	')'            shift, and enter state 18


State 16

	Param -> Type . Ident                               (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 17

State 17

	Param -> Type Ident .                               (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 18

	TopDef -> Type Ident '(' ListParam ')' . Block      (rule 5)

	'{'            shift, and enter state 22

	Block          goto state 21

State 19

	ListParam -> Param ',' . ListParam                  (rule 11)

	')'            reduce using rule 9
	'bool'         shift, and enter state 7
	'int'          shift, and enter state 8
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10

	Param          goto state 14
	ListParam      goto state 20
	Type           goto state 16

State 20

	ListParam -> Param ',' ListParam .                  (rule 11)

	')'            reduce using rule 11


State 21

	TopDef -> Type Ident '(' ListParam ')' Block .      (rule 5)

	'!'            reduce using rule 5
	'('            reduce using rule 5
	'-'            reduce using rule 5
	';'            reduce using rule 5
	'False'        reduce using rule 5
	'True'         reduce using rule 5
	'bool'         reduce using rule 5
	'break'        reduce using rule 5
	'const'        reduce using rule 5
	'continue'     reduce using rule 5
	'for'          reduce using rule 5
	'if'           reduce using rule 5
	'int'          reduce using rule 5
	'print'        reduce using rule 5
	'println'      reduce using rule 5
	'return'       reduce using rule 5
	'string'       reduce using rule 5
	'void'         reduce using rule 5
	'while'        reduce using rule 5
	'{'            reduce using rule 5
	'}'            reduce using rule 5
	L_Ident        reduce using rule 5
	L_integ        reduce using rule 5
	L_quoted       reduce using rule 5
	%eof           reduce using rule 5


State 22

	Block -> '{' . ListStmt '}'                         (rule 12)

	'!'            shift, and enter state 38
	'('            shift, and enter state 39
	'-'            shift, and enter state 40
	';'            shift, and enter state 41
	'False'        shift, and enter state 42
	'True'         shift, and enter state 43
	'bool'         shift, and enter state 7
	'break'        shift, and enter state 44
	'const'        shift, and enter state 45
	'continue'     shift, and enter state 46
	'for'          shift, and enter state 47
	'if'           shift, and enter state 48
	'int'          shift, and enter state 8
	'print'        shift, and enter state 49
	'println'      shift, and enter state 50
	'return'       shift, and enter state 51
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	'while'        shift, and enter state 52
	'{'            shift, and enter state 22
	'}'            reduce using rule 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54

	Ident          goto state 23
	Integer        goto state 24
	String         goto state 25
	TopDef         goto state 26
	Block          goto state 27
	ListStmt       goto state 28
	Stmt           goto state 29
	Type           goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 37

State 23

	Stmt -> Ident . '=' Expr ';'                        (rule 20)
	Stmt -> Ident . '++' ';'                            (rule 21)
	Stmt -> Ident . '--' ';'                            (rule 22)
	Expr6 -> Ident .                                    (rule 56)
	Expr6 -> Ident . '(' ListArg ')'                    (rule 60)

	'!='           reduce using rule 56
	'%'            reduce using rule 56
	'&&'           reduce using rule 56
	'('            shift, and enter state 91
	'*'            reduce using rule 56
	'+'            reduce using rule 56
	'++'           shift, and enter state 92
	'-'            reduce using rule 56
	'--'           shift, and enter state 93
	'/'            reduce using rule 56
	';'            reduce using rule 56
	'<'            reduce using rule 56
	'<='           reduce using rule 56
	'='            shift, and enter state 94
	'=='           reduce using rule 56
	'>'            reduce using rule 56
	'>='           reduce using rule 56
	'||'           reduce using rule 56


State 24

	Expr6 -> Integer .                                  (rule 57)

	'!='           reduce using rule 57
	'%'            reduce using rule 57
	'&&'           reduce using rule 57
	')'            reduce using rule 57
	'*'            reduce using rule 57
	'+'            reduce using rule 57
	','            reduce using rule 57
	'-'            reduce using rule 57
	'/'            reduce using rule 57
	';'            reduce using rule 57
	'<'            reduce using rule 57
	'<='           reduce using rule 57
	'=='           reduce using rule 57
	'>'            reduce using rule 57
	'>='           reduce using rule 57
	'to'           reduce using rule 57
	'||'           reduce using rule 57


State 25

	Expr6 -> String .                                   (rule 61)

	'!='           reduce using rule 61
	'%'            reduce using rule 61
	'&&'           reduce using rule 61
	')'            reduce using rule 61
	'*'            reduce using rule 61
	'+'            reduce using rule 61
	','            reduce using rule 61
	'-'            reduce using rule 61
	'/'            reduce using rule 61
	';'            reduce using rule 61
	'<'            reduce using rule 61
	'<='           reduce using rule 61
	'=='           reduce using rule 61
	'>'            reduce using rule 61
	'>='           reduce using rule 61
	'to'           reduce using rule 61
	'||'           reduce using rule 61


State 26

	Stmt -> TopDef .                                    (rule 18)

	'!'            reduce using rule 18
	'('            reduce using rule 18
	'-'            reduce using rule 18
	';'            reduce using rule 18
	'False'        reduce using rule 18
	'True'         reduce using rule 18
	'bool'         reduce using rule 18
	'break'        reduce using rule 18
	'const'        reduce using rule 18
	'continue'     reduce using rule 18
	'for'          reduce using rule 18
	'if'           reduce using rule 18
	'int'          reduce using rule 18
	'print'        reduce using rule 18
	'println'      reduce using rule 18
	'return'       reduce using rule 18
	'string'       reduce using rule 18
	'void'         reduce using rule 18
	'while'        reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	L_Ident        reduce using rule 18
	L_integ        reduce using rule 18
	L_quoted       reduce using rule 18


State 27

	Stmt -> Block .                                     (rule 16)

	'!'            reduce using rule 16
	'('            reduce using rule 16
	'-'            reduce using rule 16
	';'            reduce using rule 16
	'False'        reduce using rule 16
	'True'         reduce using rule 16
	'bool'         reduce using rule 16
	'break'        reduce using rule 16
	'const'        reduce using rule 16
	'continue'     reduce using rule 16
	'for'          reduce using rule 16
	'if'           reduce using rule 16
	'int'          reduce using rule 16
	'print'        reduce using rule 16
	'println'      reduce using rule 16
	'return'       reduce using rule 16
	'string'       reduce using rule 16
	'void'         reduce using rule 16
	'while'        reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16


State 28

	Block -> '{' ListStmt . '}'                         (rule 12)

	'}'            shift, and enter state 90


State 29

	ListStmt -> Stmt . ListStmt                         (rule 14)

	'!'            shift, and enter state 38
	'('            shift, and enter state 39
	'-'            shift, and enter state 40
	';'            shift, and enter state 41
	'False'        shift, and enter state 42
	'True'         shift, and enter state 43
	'bool'         shift, and enter state 7
	'break'        shift, and enter state 44
	'const'        shift, and enter state 45
	'continue'     shift, and enter state 46
	'for'          shift, and enter state 47
	'if'           shift, and enter state 48
	'int'          shift, and enter state 8
	'print'        shift, and enter state 49
	'println'      shift, and enter state 50
	'return'       shift, and enter state 51
	'string'       shift, and enter state 9
	'void'         shift, and enter state 10
	'while'        shift, and enter state 52
	'{'            shift, and enter state 22
	'}'            reduce using rule 13
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54

	Ident          goto state 23
	Integer        goto state 24
	String         goto state 25
	TopDef         goto state 26
	Block          goto state 27
	ListStmt       goto state 89
	Stmt           goto state 29
	Type           goto state 30
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 37

State 30

	TopDef -> Type . Ident '(' ListParam ')' Block      (rule 5)
	Stmt -> Type . ListItem ';'                         (rule 17)

	L_Ident        shift, and enter state 2

	Ident          goto state 86
	Item           goto state 87
	ListItem       goto state 88

State 31

	Expr5 -> Expr6 .                                    (rule 65)

	'!='           reduce using rule 65
	'%'            reduce using rule 65
	'&&'           reduce using rule 65
	')'            reduce using rule 65
	'*'            reduce using rule 65
	'+'            reduce using rule 65
	','            reduce using rule 65
	'-'            reduce using rule 65
	'/'            reduce using rule 65
	';'            reduce using rule 65
	'<'            reduce using rule 65
	'<='           reduce using rule 65
	'=='           reduce using rule 65
	'>'            reduce using rule 65
	'>='           reduce using rule 65
	'to'           reduce using rule 65
	'||'           reduce using rule 65


State 32

	Expr4 -> Expr5 .                                    (rule 67)

	'!='           reduce using rule 67
	'%'            reduce using rule 67
	'&&'           reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67
	'+'            reduce using rule 67
	','            reduce using rule 67
	'-'            reduce using rule 67
	'/'            reduce using rule 67
	';'            reduce using rule 67
	'<'            reduce using rule 67
	'<='           reduce using rule 67
	'=='           reduce using rule 67
	'>'            reduce using rule 67
	'>='           reduce using rule 67
	'to'           reduce using rule 67
	'||'           reduce using rule 67


State 33

	Expr4 -> Expr4 . MulOp Expr5                        (rule 66)
	Expr3 -> Expr4 .                                    (rule 69)

	'!='           reduce using rule 69
	'%'            shift, and enter state 83
	'&&'           reduce using rule 69
	')'            reduce using rule 69
	'*'            shift, and enter state 84
	'+'            reduce using rule 69
	','            reduce using rule 69
	'-'            reduce using rule 69
	'/'            shift, and enter state 85
	';'            reduce using rule 69
	'<'            reduce using rule 69
	'<='           reduce using rule 69
	'=='           reduce using rule 69
	'>'            reduce using rule 69
	'>='           reduce using rule 69
	'to'           reduce using rule 69
	'||'           reduce using rule 69

	MulOp          goto state 82

State 34

	Expr3 -> Expr3 . AddOp Expr4                        (rule 68)
	Expr2 -> Expr3 .                                    (rule 71)

	'!='           reduce using rule 71
	'&&'           reduce using rule 71
	')'            reduce using rule 71
	'+'            shift, and enter state 80
	','            reduce using rule 71
	'-'            shift, and enter state 81
	';'            reduce using rule 71
	'<'            reduce using rule 71
	'<='           reduce using rule 71
	'=='           reduce using rule 71
	'>'            reduce using rule 71
	'>='           reduce using rule 71
	'to'           reduce using rule 71
	'||'           reduce using rule 71

	AddOp          goto state 79

State 35

	Expr2 -> Expr2 . RelOp Expr3                        (rule 70)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 72)
	Expr1 -> Expr2 .                                    (rule 73)

	'!='           shift, and enter state 72
	'&&'           shift, and enter state 73
	')'            reduce using rule 73
	','            reduce using rule 73
	';'            reduce using rule 73
	'<'            shift, and enter state 74
	'<='           shift, and enter state 75
	'=='           shift, and enter state 76
	'>'            shift, and enter state 77
	'>='           shift, and enter state 78
	'to'           reduce using rule 73
	'||'           reduce using rule 73

	RelOp          goto state 71

State 36

	Expr -> Expr1 . '||' Expr                           (rule 74)
	Expr -> Expr1 .                                     (rule 75)

	')'            reduce using rule 75
	','            reduce using rule 75
	';'            reduce using rule 75
	'to'           reduce using rule 75
	'||'           shift, and enter state 70


State 37

	Stmt -> Expr . ';'                                  (rule 27)

	';'            shift, and enter state 69


State 38

	Expr5 -> '!' . Expr6                                (rule 64)

	'('            shift, and enter state 39
	'False'        shift, and enter state 42
	'True'         shift, and enter state 43
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54

	Ident          goto state 56
	Integer        goto state 24
	String         goto state 25
	Expr6          goto state 68

State 39

	Expr6 -> '(' . Expr ')'                             (rule 62)

	'!'            shift, and enter state 38
	'('            shift, and enter state 39
	'-'            shift, and enter state 40
	'False'        shift, and enter state 42
	'True'         shift, and enter state 43
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54

	Ident          goto state 56
	Integer        goto state 24
	String         goto state 25
	Expr6          goto state 31
	Expr5          goto state 32
	Expr4          goto state 33
	Expr3          goto state 34
	Expr2          goto state 35
	Expr1          goto state 36
	Expr           goto state 67

State 40

	Expr5 -> '-' . Expr6                                (rule 63)

	'('            shift, and enter state 39
	'False'        shift, and enter state 42
	'True'         shift, and enter state 43
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 53
	L_quoted       shift, and enter state 54

	Ident          goto state 56
	Integer        goto state 24
	String         goto state 25
	Expr6          goto state 66

State 41

	Stmt -> ';' .                                       (rule 15)
